force-app/main/default/objects/Healthcare_Surgeon_Relationship__c/Healthcare_Surgeon_Relationship__c.object-meta.xml
<CustomObject>
    <label>Account Relationship</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts Relationships</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>