force-app/main/default/objects/Healthcare_Surgeon_Relationship__c/fields/Class_Description__c.field-meta.xml
<CustomField>
    <fullName>Class_Description__c</fullName>
    <formula>Healthcare_Facility__r.Class_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Description</label>
    <type>Text</type>
</CustomField>