force-app/main/default/objects/Healthcare_Surgeon_Relationship__c/fields/Healthcare_Facility__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcare Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Healthcare Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surgeon Relationship</relationshipLabel>
    <relationshipName>R00N80000002hSSQEA2</relationshipName>
    <type>Lookup</type>
</CustomField>