force-app/main/default/objects/Healthcare_Surgeon_Relationship__c/fields/Relationship_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Relationship_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship End Date</label>
    <type>Date</type>
</CustomField>