force-app/main/default/objects/Healthcare_Surgeon_Relationship__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Healthcare Facility Relationship</relationshipLabel>
    <relationshipName>Healthcare_Facility_Surgeon</relationshipName>
    <type>Lookup</type>
</CustomField>