force-app/main/default/objects/Healthcare_Surgeon_Relationship__c/fields/Territory_Number__c.field-meta.xml
<CustomField>
    <fullName>Territory_Number__c</fullName>
    <label>Territory Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>