force-app/main/default/objects/Healthcare_Surgeon_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Surgeon__c</columns>
    <columns>Healthcare_Facility__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Territory_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>